--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server":"nodemon server.js"
+    "start": "npm run build && node server.js",
+    "build": "cd ../frontend && npm install && npm run build",
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
